# astroPTv3

./: .gitignore  .gitmodules  AGENTS.md  JETFORMER_PLAN.md  pyrightconfig.json  smollm_astropt_plan.md
astro/: .gitignore  PLAN.md  README.md  __init__.py  pyproject.toml  test_galaxy_load.py  train.py  train_patches.py
astro/configs/: patches_135m.sh  stage1_256m.sh  stage2_256m.sh
astro/configs/data/: pilot_images_spectra.yaml  pilot_images_spectra_v2.yaml
astro/configs/model/: astropt3-12b.yaml  astropt3-160m.yaml  astropt3-1b.yaml  astropt3-1p4b.yaml  astropt3-2p8b.yaml  astropt3-410m.yaml  astropt3-6p9b.yaml  astropt3-70m.yaml  test-tiny-jetformer.yaml  test-tiny.yaml
astro/configs/nanotron/: astropt3-12b.yaml  astropt3-160m-shakeout.yaml  astropt3-160m.yaml  astropt3-1b.yaml  astropt3-1p4b.yaml  astropt3-2p8b-tp2-dryrun.yaml  astropt3-2p8b.yaml  astropt3-410m.yaml  astropt3-6p9b.yaml  astropt3-70m-baby.yaml  astropt3-70m-jetformer-crossmatch-only.yaml  astropt3-70m-jetformer-lowlr.yaml  astropt3-70m-jetformer-mmu-nopairs.yaml  astropt3-70m-jetformer-mmu-skim.yaml  astropt3-70m-jetformer-mmu.yaml  astropt3-70m-jetformer-physnorm.yaml  astropt3-70m-jetformer-pilotv2-scalars.yaml  astropt3-70m-jetformer-pilotv2-specnorm-clip100.yaml  astropt3-70m-jetformer-pilotv2-specnorm-shuffle.yaml  astropt3-70m-jetformer-pilotv2-specnorm.yaml  astropt3-70m-jetformer-pilotv2.yaml  astropt3-70m-jetformer.yaml  astropt3-70m-shakeout.yaml  astropt3-70m.yaml  astropt3-test-tiny-jetformer.yaml  astropt3-test-tiny.yaml
astro/data/: __init__.py  collate.py  galaxy_dataset.py  packing.py  patch_dataset.py  smolvlm_adapter.py
astro/docs/: 2026-07-21-skim-loader-crash-handoff.md  2026-07-21-streaming-shakeout-handoff.md  2026-07-21-streaming-throughput-audit.md  PHYSICAL_NORM_PLAN.md  README.md  architecture.md  jetformer_noise_diagnosis.md  jetformer_plan.md  jetformer_run_guide.md  mmu_streaming_throughput_plan.md  physical_norm_plan.md  training.md
astro/docs/adr/: 0001-jetformer-inverse-variance-loss.md  0002-ivar-weighted-huber-loss.md  0003-checkpoint-samples-in-eval-sidecar.md  0004-spiral-token-order-for-imagery.md  0005-include-spectra-from-non-crossmatched-desi.md  0006-stream-mmu-upstream.md  0007-physical-spectra-normalization.md  0008-scalar-modalities.md  0009-masked-diffusion-objective.md  0010-remove-affine-and-aim-tokenisers.md  0011-skim-crossmatch-scans.md  0012-gate-mmu-streaming-throughput.md
astro/model/: __init__.py  patch_model.py
astro/scripts/: build_match_index.py  check_pilot_data.py  compute_norm_stats.py  count_params.py  generate.py  launch_jetformer_70m.sh  launch_jetformer_70m_lowlr.sbatch  launch_jetformer_70m_lowlr.sh  launch_mmu_deltaai.sh  launch_mmu_gpu5.sh  launch_mmu_nopairs_gpu5.sh  launch_slurm.sbatch  prepare_pilot_data.py  run_probe_sweep.py  spike_profile_streaming.py  tp2_grad_check.py  uhhpc_launch_jetformer_70m.sh
astro/src/astropt3/: __init__.py  checkpoint_schedule.py  config_io.py  configuration_astropt3.py  generation.py  modalities.py  modeling_astropt3.py  tokenization.py  train_smoke.py
astro/src/astropt3/data/: band_registry.py  mmu.py  nanotron_loader.py  packing.py  scalar_registry.py  spectral.py  streaming.py  synthetic.py  transforms.py
astro/src/astropt3/eval/: __init__.py  linear_probe.py  samples.py  scalar_head.py  val_loss.py
astro/tests/: conftest.py  fake_mmu.py  test_checkpoint_schedule.py  test_eval.py  test_generate.py  test_jetformer.py  test_jetformer_gpu.py  test_loader_resume.py  test_mmu.py  test_modality_order.py  test_model.py  test_nanotron_gpu.py  test_nanotron_loader.py  test_packing.py  test_phase4_gpu.py  test_physical_norm.py  test_prepare_pilot_data.py  test_saveload.py  test_scalar_modalities.py  test_spectral_norm.py  test_streaming.py  test_tokenization.py  test_train_smoke.py  test_transforms.py
