[project]
name = "astropt3"
version = "0.1.0"
description = "AstroPTv3: SmolLM3-architecture multimodal astronomical foundation models pretrained on the Multimodal Universe"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Michael J. Smith" },
    { name = "UniverseTBD" },
]
dependencies = [
    "torch>=2.6",
    "transformers>=4.57",
    "datasets>=4.3",
    "einops>=0.8",
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Offline data preparation (login node only; lsdb/hats never needed on compute nodes)
data = [
    "lsdb",
    "hats",
    "nested-pandas",
]
# Training machine only. Phase 3 adds the nanotron fork here as an editable
# path source (../nanotron git submodule) once the submodule exists:
#   [tool.uv.sources]
#   nanotron = { path = "../nanotron", editable = true }
train = [
    "flash-attn",
    "wandb",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/astropt3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: tests that need a GPU + nanotron env (run on the training machine)",
]
addopts = "-m 'not gpu'"
