[project]
name = "astropt3"
version = "0.1.0"
description = "AstroPTv3: SmolLM3-architecture multimodal astronomical foundation models pretrained on the Multimodal Universe"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Michael J. Smith" },
    { name = "UniverseTBD" },
]
dependencies = [
    "torch>=2.6",
    "torchdata>=0.10",  # StatefulDataLoader: stream resume with num_workers > 0
    "transformers>=4.57",
    "datasets>=4.3",
    "einops>=0.8",
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Offline data preparation (login node only; lsdb/hats never needed on compute nodes)
data = [
    "lsdb",
    "hats",
    "nested-pandas",
    "scipy",  # pass-2 matched-position KD-tree (ADR 0005)
]
# Training machine only: the nanotron fork (../nanotron git submodule,
# editable) plus flash-attn (needs a CUDA toolchain or a matching prebuilt
# wheel — see astro/tests/test_nanotron_gpu.py for the verification recipe).
train = [
    "nanotron",
    "flash-attn",
    "wandb",
]
dev = [
    "pytest>=8.0",
    "matplotlib>=3.8",  # scripts/generate.py sample plots
]

[tool.uv.sources]
nanotron = { path = "../nanotron", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/astropt3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: tests that need a GPU + nanotron env (run on the training machine)",
]
addopts = "-m 'not gpu'"
