[project]
name = "astropt3"
version = "0.1.0"
description = "AstroPTv3: SmolLM3-architecture multimodal astronomical foundation models pretrained on the Multimodal Universe"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Michael J. Smith" },
    { name = "UniverseTBD" },
]
dependencies = [
    "torch>=2.6",
    "torchdata>=0.10",  # StatefulDataLoader: stream resume with num_workers > 0
    "transformers>=4.57",
    "datasets>=4.3",
    "einops>=0.8",
    "numpy>=1.26",
    "pyyaml>=6.0",
    # ADR 0006: the corpus is streamed from the HF hub at train time via
    # hats (partition enumeration) + pyarrow (row-group reads). lsdb is
    # deliberately NOT here — the crossmatch is precomputed offline into a
    # match-index, so no train-time path needs its dask/KD-tree engine.
    "hats",
    "pyarrow",
    "huggingface-hub",
    "nested-pandas",
]

[project.optional-dependencies]
# Offline prep (login node): building the ADR 0006 match-index is the only
# thing that still needs lsdb.
data = [
    "lsdb",
]
# Training machine only: the nanotron fork (../nanotron git submodule,
# editable) plus flash-attn (needs a CUDA toolchain or a matching prebuilt
# wheel — see astro/tests/test_nanotron_gpu.py for the verification recipe).
train = [
    "nanotron",
    "flash-attn",
    "wandb",
    "matplotlib>=3.8",  # eval sidecar sample panels (astropt3.eval.samples)
]
dev = [
    "pytest>=8.0",
    "matplotlib>=3.8",  # scripts/generate.py sample plots
]

[tool.uv.sources]
nanotron = { path = "../nanotron", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/astropt3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: tests that need a GPU + nanotron env (run on the training machine)",
    "network: tests that stream live MMU catalogs from the HF hub",
]
addopts = "-m 'not gpu'"
